# ganesha-ai

./: .gitignore  COMMIT_LOG.md  DESIGN_PRINCIPLES.md  EDGE_CASE_TEST_REPORT.md  FINAL_QUALITY_CHECK.md  FLUX_CAPACITOR_FINAL_REPORT.md  FLUX_LOOP_SUMMARY.md  GANESHA-KICKOFF-PROMPT.md  MODERNIZATION.md  POST_FIX_TEST_RESULTS.md  PR_SUMMARY.md  README.md  add  claudia_bridge.py  demo.js  ganesha-google-2.txt  ganesha-google.txt  ganesha.py  ganesha2.py  index.html  insert_sort_opt  insert_sort_opt.cpp  install.ps1  install.sh  providers.py  run_500_tests.sh  run_all_100_tests.sh  run_edge_case_tests.sh  setup.py  test_cases_edge_250.txt  test_cases_standard_250.txt  test_firefox_ebay.sh  test_hyperhealth.py  test_suite_100_edge_cases.md
ganesha-rs/: .gitignore  .gitlab-ci.yml  Cargo.toml  GANESHA_4.0_DESIGN.md  README.md  cat_facts.html  cat_facts.txt  cat_facts_final.txt  package-lock.json  package.json  quick_test.txt  real fact_25s.html  test_cat_facts.sh  test_llm_mcp.sh  test_mcp.sh
ganesha-rs/.cargo/: config.toml
ganesha-rs/.claude/skills/: flux.md  ganesha-test.md
ganesha-rs/.claude/skills/ganesha-test/: SKILL.md
ganesha-rs/docs/: README.md
ganesha-rs/docs/architecture/: overview.md
ganesha-rs/docs/features/: cli.md  mcp.md  risk-levels.md  vision.md  voice.md
ganesha-rs/docs/getting-started/: installation.md
ganesha-rs/docs/research/: competitor-analysis.md
ganesha-rs/examples/: blender_smiley_demo.rs  cats_document.rs  computer_use_test.rs  dual_model_test.rs  ganesha_autonomous.rs  ganesha_fast.rs  ganesha_gui_test.rs  local_computer_use.rs  ralph_advanced.rs  ralph_autonomous.rs  ralph_eagle_ant.rs  ralph_hybrid.rs  ralph_learns.rs  ralph_playwright.rs  ralph_reactive.rs  ralph_swarm.rs  ralph_vla.rs  reactive_agent.rs  reactive_local.rs  reactive_robust.rs  simple_firefox_test.rs  vision_test.rs
ganesha-rs/ganesha4/: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Component.svelte  Dockerfile  HELP.md  Makefile  MyComponent.css  MyComponent.jsx  MyComponent.vue  README_backup.md  add.py  backup_folder.sh  backup_function.sh  backup_script.sh  binary_search.js  binary_search.py  binary_search_tree.py  bubble_sort.go  calculator.js  car.py  chat-bubble.js  cleanup.sed  compose.js  config.yaml  context_manager_example.py  countdown.py  counter.py  counter.v  counter.vhd  curry.js  dark.css  data.csv  date_formatter.js  debounce.js  deepClone.js  disk_usage.sh  documentation.md  email_validator.js  (+99 more)
ganesha-rs/ganesha4/api_demo/: package.json
ganesha-rs/ganesha4/blog_test/: post1.html  post2.html  post3.html  style.css
ganesha-rs/ganesha4/chat_ui/: index.html  script.js  style.css
ganesha-rs/ganesha4/colorpicker/: index.html  script.js  style.css
ganesha-rs/ganesha4/crates/ganesha-cli/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-cli/src/: cli.rs  config.rs  history.rs  main.rs  render.rs  repl.rs  setup.rs  tui.rs  voice_input.rs
ganesha-rs/ganesha4/crates/ganesha-core/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-core/src/: config.rs  consent.rs  executor.rs  lib.rs  memory.rs  minime.rs  planner.rs  risk.rs  rollback.rs  sandbox.rs  session.rs  verifier.rs
ganesha-rs/ganesha4/crates/ganesha-desktop/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-desktop/src/: border.rs  commands.rs  config.rs  hotkey.rs  lib.rs  state.rs  tray.rs  (+1 more)
ganesha-rs/ganesha4/crates/ganesha-learning/: Cargo.toml  README.md
ganesha-rs/ganesha4/crates/ganesha-mcp/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-providers/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-vision/: Cargo.toml
ganesha-rs/ganesha4/crates/ganesha-voice/: Cargo.toml
ganesha-rs/ganesha4/docs/: ERROR_HANDLING.md  SAFETY_EXEC.md  VLA_VERIFICATION.md  llm-provider-testing-whitepaper.md
ganesha-rs/ganesha4/ecommerce_test/: index.html  script.js  style.css
ganesha-rs/ganesha4/flashcard_app/: index.html  script.js  style.css
ganesha-rs/ganesha4/gallery/: index.html  style.css
ganesha-rs/ganesha4/game_test2/: index.html  script.js
ganesha-rs/ganesha4/landing_page/: index.html
ganesha-rs/ganesha4/lm_calc/: index.html
ganesha-rs/ganesha4/modal_demo/: index.html  script.js  style.css
ganesha-rs/ganesha4/quiz_app/: index.html  script.js  style.css
ganesha-rs/ganesha4/src/: lib.rs
ganesha-rs/ganesha4/tests/: comprehensive_test.sh  comprehensive_test_plan.md  localhost_test_results.md  windows_test_results.md  windows_test_suite.md
ganesha-rs/ganesha4/tests/test_workspace/: code_sample.py  config.json  remote_test.txt  sample.txt  test_output.txt
ganesha-rs/ganesha4/vision/: Cargo.toml
ganesha-rs/ganesha4/vision/examples/: basic_test.rs  capture_demo.rs
ganesha-rs/ganesha4/vision/src/: capture.rs  controller.rs  learning.rs  lib.rs  model.rs  overlay.rs
ganesha-rs/ganesha4/vision/tests/: integration_test.rs
ganesha-rs/scripts/: build-all.sh  build-releases.sh  install.ps1  install.sh  playwright_bridge.js  setup_showui.sh  setup_test_vm.sh
ganesha-rs/simple-express/: index.js  package-lock.json  package.json
ganesha-rs/src/: agent.rs  agent_wiggum.rs  app_knowledge.rs  comprehensive_test.rs  cursor.rs  docs.rs  dossier.rs  flux.rs  lib.rs  main.rs  memory.rs  menu.rs  overlay.rs  pretty.rs  safety.rs  smell.rs  websearch.rs  workflow.rs  zones.rs
ganesha-rs/src/agent/: knowledge.rs  mod.rs  reactive_vision.rs
ganesha-rs/src/agent_old/: control.rs
ganesha-rs/src/cli/: mod.rs
ganesha-rs/src/core/: access_control.rs  auth.rs  config.rs  mod.rs
ganesha-rs/src/input/: mod.rs
ganesha-rs/src/logging/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
ganesha-rs/src/orchestrator/: engine.rs  mcp.rs  memory.rs  memory_db.rs  minime.rs  mod.rs  providers.rs  rollback.rs  scheduler.rs  tools.rs  vision.rs  wiggum.rs
ganesha-rs/src/providers/: mod.rs
ganesha-rs/src/sentinel/: mod.rs
ganesha-rs/src/tui/: mod.rs  settings.rs
ganesha-rs/src/vision/: mod.rs
ganesha-rs/src/vla/: action_planner.rs  element_locator.rs  loop_controller.rs  mod.rs  task_db.rs
ganesha-rs/src/voice/: mod.rs
ganesha-rs/tests/: safety_integration_test.rs
(+93 files in other folders)
