[package]
name = "ganesha-vision"
version = "0.1.0"
edition = "2021"
authors = ["Ganesha Team"]
description = "Vision system for Ganesha - Learning from demonstration with persistent memory"
license = "MIT"
repository = "https://github.com/ganesha/ganesha-rs"

# This crate is standalone (not part of the main workspace)
[workspace]

[lib]
name = "ganesha_vision"
path = "src/lib.rs"

[features]
default = ["screen-capture"]
screen-capture = ["dep:xcap"]

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full", "sync", "time", "rt-multi-thread"] }

# Async traits
async-trait = "0.1"

# Image processing
image = "0.25"

# Encoding
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging/tracing
tracing = "0.1"

# Error handling
thiserror = "1.0"

# HTTP client for vision API calls
reqwest = { version = "0.12", features = ["json"] }

# Screen capture (cross-platform)
xcap = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
