[package]
name = "ganesha-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Ganesha - planning, execution, verification, memory"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
rusqlite.workspace = true
sha2.workspace = true

# Local crates
ganesha-providers = { path = "../ganesha-providers" }
ganesha-mcp = { path = "../ganesha-mcp" }

# Compression for rollback snapshots
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
