[package]
name = "ganesha-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Desktop GUI app for Ganesha (Obstacle Remover)"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Tauri will be added when building the desktop app
# tauri = "2"
