[package]
name = "ganesha-vision"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vision and VLA capabilities for Ganesha"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
