[package]
name = "ganesha-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Voice interface for Ganesha"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
